year folders; run script

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 <title>I'm Going To Die Here</title>
 <body>
-    <img src="aicomics/2024-08-09-imgoingtodiehere.jpg">
+    <a href="aicomics/2024/0809-imgoingtodiehere.html"><img src="aicomics/2024/0809-imgoingtodiehere.jpg"></a>
 </body>
 </head>
