--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
+<!DOCTYPE html> 
 <head>
-<title>I'm Going To Die Here</title>
-<body>
-    <a href="aicomics/2024/0809-imgoingtodiehere.html"><img src="aicomics/2024/0809-imgoingtodiehere.jpg"></a>
-</body>
+  <title>I'm Going To Die Here</title>
+  <meta charset="UTF-8">
+  <meta name="author" content="Neil C. Obremski and Greg Havener">
+  <meta name="description" content="">
+  <meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="imgoingtodiehere.js"></script>
 </head>
+<body>
+  <a href="aicomics/2024/0809-imgoingtodiehere.html">Latest</a>
+</body>
+</html>
