--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <script src="imgoingtodiehere.js"></script>
 </head>
 <body>
-  <a href="aicomics/2024/0809-imgoingtodiehere.html">Latest</a>
+  <h1>imgoingtodiehere</h1>
+
+  <p>How can people be depressed when AI is so funny?</p>
+
+  <h3>2024 Archive</h3>
+  <ul>
+    <li><a href="2024/0809-imgoingtodiehere.html">
+      08/09: I'm Going To Die Here
+    </a></li>
+  </ul>
 </body>
 </html>
