--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <head>
   <title>I'm Going To Die Here</title>
   <meta charset="UTF-8">
-  <meta name="author" content="Neil C. Obremski and Greg Havener">
+  <meta name="author" content="Greg Havener and Neil C. Obremski">
   <meta name="description" content="">
   <meta name="robots" content="index, follow">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../imgoingtodiehere.css">
   <script src="imgoingtodiehere.js"></script>
 </head>
 <body>
@@ -15,8 +16,8 @@
 
   <h3>2024 Archive</h3>
   <ul>
-    <li><a href="2024/0809-imgoingtodiehere.html">
-      08/09: I'm Going To Die Here
+    <li><a href="2024/0809-i-am-thirsty.html">
+      08/09: I am thirsty
     </a></li>
   </ul>
 </body>
