--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <li><a href="2024/0809-i-am-thirsty.html">
       08/09: I am thirsty
     </a></li>
+    <li><a href="2024/0904-blutooth-pairng.html">
+      09/04: blutooth pairng
+    </a></li>
+    <li><a href="2024/0906-too-much.html">
+      09/06: 3.5 hour drive is too much
+    </a></li>
+    <li><a href="2024/0907-here-comes-the-sun.html">
+      09/07: Here comes the sun!
+    </a></li>
+    <li><a href="2024/1024-she-sold-csat.html">
+      10/24: she sold CSAT down by the seashore
+    </a></li>
   </ul>
 </body>
 </html>
