i don't always write code

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <li><a href="2024/0904-blutooth-pairng.html">
       09/04: blutooth pairng
     </a></li>
+    <li><a href="2024/0905-i-dont-always-write-code.html">
+      09/05: I don't always write code
+    </a></li>
     <li><a href="2024/0906-too-much.html">
       09/06: 3.5 hour drive is too much
     </a></li>
