add link to contractor lemonade

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <li><a href="2024/0907-here-comes-the-sun.html">
       09/07: Here comes the sun!
     </a></li>
+    <li><a href="2024/1021-contractor-lemonade.html">
+      10/21: Bespoke Lemonade Stand
+    </a></li>
     <li><a href="2024/1024-she-sold-csat.html">
       10/24: she sold CSAT down by the seashore
     </a></li>
