--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <li><a href="2024/1024-she-sold-csat.html">
       10/24: she sold CSAT down by the seashore
     </a></li>
+    <li><a href="2024/1112-shovel-poo.html">
+      11/12: Shovel Poo
+    </a></li>
   </ul>
 </body>
 </html>
